samples/_failures_safe/1761432824_7ccc97_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_104a9f9c.c:186: error: expected ‘;’, ‘,’ or ‘)’ at end of input
